* Breaking changes:     1. Removed the Maven plugin and code generator.         * The code generator was causing a "split package" issue because code was always being generated into           the same package.         * This caused a “split package” error since only one module is allowed to export a package.     2. Removed the use of native binaries. Colored DIFFs are still supported, but Windows requires the use of        Windows Terminal (free download in Windows 10, built-in feature in Windows 11).     3. Improved performance by reducing memory usage and the frequency of GC runs.     4. Renamed `validateThat()` to `checkIf()`.     5. Renamed `assertThat()` to `assumeThat()`.     6. Added support for the built-in `assert` mechanism.         - Asserts can be used with any type of validator, but are typically used           with `assumeThat().orElseThrow()` and `checkIf().orElseThrow()`.     7. Use consistent parameter ordering across the entire API: `(value, name)`         - Adding contextual information now looks like this: `requireThat().context(value, name)`     8. Added `Validator.apply(Consumer)` to nest validations, and `Validator.and(Validator)` to combine        validation results.     9. Added support for primitive types to avoid boxing when possible.     10. Dropped the `isOneOf()` and `isNotOneOf()` functionality yet again. I haven't figured out a good         design for this yet.     11. Added `ObjectValidator.isX()` methods to downcast to known types. * Bugfixes:     * `StringValidator/Verifier.asShort()`, `asInteger()` and `asLong()` were not handling the case where a       string could not be converted to a number.     * Validators were only returning the first failure.